# ch-jdk-changer

./: .gitignore  LICENSE  README.md  README_NEW.md  ch.bat  first.txt  install.ps1  install.sh  pyproject.toml  readme.md
.github/workflows/: ci.yml
jenv/: discovery.py  downloader.py  main.py  settings.py  util.py
tests/functional/: __init__.py  test_cli.py
tests/unit/: test_discovery.py  test_util.py
