[project]
name = "jenv"
version = "0.1.0"
description = "Java Environment Manager"
authors = [
    {name = "Cheikh Tidiane", email = "atidiane741@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.8"

dependencies = [
    "typer[all]>=0.9.0",
]

[project.scripts]
jenv = "jenv.main:app"

# Minimal tool.poetry section. Poetry will use [project] for most metadata.
[tool.poetry]
# Package configuration: if your package isn't a standard layout (e.g. src/jenv or jenv.py)
# you might need: packages = [{include = "jenv"}]
# For this project structure (jenv folder is the package), it should be auto-detected.

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"

[build-system]
requires = ["poetry-core>=1.5.0"] # Using a reasonably modern poetry-core
build-backend = "poetry.core.masonry.api"
