[project]
name = "jenv-java"
version = "0.2.0"
description = "Cross-platform Java Environment Manager - Download, install, and switch between JDK versions"
authors = [
    {name = "Cheikh Tidiane", email = "atidiane741@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["java", "jdk", "maven", "version-manager", "sdkman", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/traorecheikh/ch-jdk-changer"
Repository = "https://github.com/traorecheikh/ch-jdk-changer.git"
Issues = "https://github.com/traorecheikh/ch-jdk-changer/issues"
Documentation = "https://github.com/traorecheikh/ch-jdk-changer#readme"

[project.scripts]
jenv = "jenv.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=1.0",
]

# Minimal tool.poetry section. Poetry will use [project] for most metadata.
[tool.poetry]
name = "jenv-java"
version = "0.2.0"
packages = [{include = "jenv"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-mock = "^3.0"

[build-system]
requires = ["poetry-core>=1.5.0"] # Using a reasonably modern poetry-core
build-backend = "poetry.core.masonry.api"
